[metadata]
name=clearpath_bt_joy
version = attr: clearpath_bt_joy.__version__
author = Chris Iverach-Brereton
author_email = civerachb@clearpathrobotics.com
maintainer = Chris Iverach-Brereton
maintainer_email = civerachb@clearpathrobotics.com
description = Clearpath bluetooth joy node

[options]
install_requires =
    requests
    importlib-metadata; python_version < "3.8"

[develop]
script_dir=$base/lib/clearpath_bt_joy

[install]
install_scripts=$base/lib/clearpath_bt_joy
